welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:12: error: Invalid literal number
def 1motif {              // 1 motif
    ^